--- a/main.css
+++ b/main.css
@@ -13,7 +13,7 @@ input[type=text], input[type=password]{
 input[type=submit]{
     border: 0;
     outline: 0;
-    background-color: #003366 ;
+    background-color: #0c4883 ;
     font-size: 18px;
     color: white;
     padding: 10px 30px;
